@@ -6,6 +6,9 @@ xx/xx/2005 - 1.12.2-WIP
 	- Rewrite gcc version detection logic using the -dumpversion option.
 	  Tested on various OS and architectures and gcc versions from 2.95 to
 	  4.0.1 with some weird ones like 3.5-blah thrown in, too.  (Anton)
+	- Fix bogus le16_to_cpu() which shouldbe le32_to_cpu() when accessing
+	  the attribute list entry attribute type in some places in
+	  libntfs/attrib.c.  (Anton)
 
 10/10/2005 - 1.12.1 - Minor fix to location of mount.ntfs-fuse and mkfs.ntfs.
 
